Bug 949471 - history.state should be null, not undefined, when there is no state. r=smaug, a=lsblakk